[package]
name = "rust-crypto-wasm"
version = "0.3.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/DaGenix/rust-crypto/"
repository = "https://github.com/DaGenix/rust-crypto/"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = [ "Crypto", "MD5", "Sha1", "Sha2", "AES" ]
readme = "README.md"
build = "build.rs"

[lib]
name = "crypto"

[features]
with-bench = []

[build-dependencies]
cc = "^1.0.79"

[dependencies]
libc = { version = "^0.2", default-features = false }
rand = "^0.3"
getrandom = { version = "^0.2", features = ["std"] }
base64 = "^0.21"
hex = "^0.4.3"
